--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+body{
+  background-color: rgb(209, 209, 209);
+  height: 100vh;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -40,3 +45,5 @@
 .read-the-docs {
   color: #888;
 }
+
+
